Fix: z-index of dropdown menu set to 10

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -64,6 +64,7 @@
 	border-radius: 4px;
 	width: 100%;
 	padding-block: 24px;
+	z-index: 10;
 }
 
 .locations-list, .amenities-list {
